# tool-monitor

./: .env.example  .gitignore  README.md  REVIEW.md  pyproject.toml
prompts/: SECURITY_REVIEW.md
src/tool_monitor/: display.py  flame_run.py  graph_run.py  harness.py  merkle.py  models.py  run.py  tools.py
tests/: test_harness.py  test_tools.py
workspace/: agent_patterns.txt
