[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-monitor"
version = "0.1.0"
description = "Secure agentic harness using Merkle-tree Control-Flow Integrity and Plan-then-Execute verification."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "duckduckgo-search>=6.0.0",
]

[project.scripts]
tool-monitor = "tool_monitor.run:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
